# vaspchg_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: base.rs  chg.rs  chgcar.rs  error.rs  lib.rs  parchg.rs
tests/: tests.rs
tests/Fe3O4/: test.rs
tests/no_spin/: test.rs
tests/soc/: test.rs
tests/spin/: test.rs
