[package]
name = "vaspchg_rs"
version = "0.1.0"
authors = ["Ionizing <PeterSmith_9@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A lib to parse VASP's charge density file."
homepage = "https://github.com/Ionizing/vaspchg_rs"
repository = "https://github.com/Ionizing/vaspchg_rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
vasp-poscar = "0.3.2"
regex = "1.3.9"

[dev-dependencies]
flate2 = "1.0.16"

#[package.metadata.docs.rs]
#rustdoc-args = ["--html-in-header", "katex-header.html"]
